--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,48 +7,17 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/btnWithoutAnimation"
+            android:id="@+id/btnWithWithoutAnimation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/without_animation"/>
-
-        <TextView
-            android:id="@+id/tvWithoutAnimation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/without_animation"
+            android:text="@string/with_or_without_animation"
             android:gravity="center"/>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/llWithAnimation"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/btnWithAnimation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/with_animtaion"/>
-
-        <TextView
-            android:id="@+id/tvWithAnimation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/with_animtaion"
-            android:gravity="center"/>
-
-    </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
