Change Image Transform

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,12 @@
             android:layout_height="wrap_content"
             android:text="@string/explode"/>
 
+        <Button
+            android:id="@+id/btnChangeImageTransform"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/change_image_transform"/>
+
     </LinearLayout>
 
 </ScrollView>
