--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,12 @@
             android:layout_height="wrap_content"
             android:text="@string/change_image_transform"/>
 
+        <Button
+            android:id="@+id/btnPathMotion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/path_curved_motion"/>
+
     </LinearLayout>
 
 </ScrollView>
