Added coordinator layout activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,12 @@
             android:layout_height="wrap_content"
             android:text="@string/transition_name"/>
 
+        <Button
+            android:id="@+id/btnCoordinatorLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/coordinator_layout"/>
+
     </LinearLayout>
 
 </ScrollView>
