--- a/app/src/main/res/layout/activity_coordinator_layout.xml
+++ b/app/src/main/res/layout/activity_coordinator_layout.xml
@@ -4,6 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".CoordinatorLayoutActivity">
+
+    <Button
+        android:id="@+id/btnFab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/fab"/>
 
 </LinearLayout>
