--- a/app/src/main/res/layout/activity_slide.xml
+++ b/app/src/main/res/layout/activity_slide.xml
@@ -5,7 +5,7 @@
     android:id="@+id/clParent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SlideActivity">
+    tools:context=".animations.SlideActivity">
 
     <Button
         android:id="@+id/btnSlide"
