--- a/app/src/main/res/layout/activity_scene_transition.xml
+++ b/app/src/main/res/layout/activity_scene_transition.xml
@@ -5,7 +5,7 @@
     android:id="@+id/btnActivitySceneTransition"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivitySceneTransitionActivity">
+    tools:context=".animations.ActivitySceneTransitionActivity">
 
     <Button
         android:id="@+id/button"
