--- a/app/src/main/res/layout/activity_coordinator_layout.xml
+++ b/app/src/main/res/layout/activity_coordinator_layout.xml
@@ -19,4 +19,10 @@
         android:layout_height="wrap_content"
         android:text="@string/custom_behavior"/>
 
+    <Button
+        android:id="@+id/btnCustomRotateBehavior"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/custom_rotate_behavior"/>
+
 </LinearLayout>
