--- a/app/src/main/res/layout/activity_coordinator_layout.xml
+++ b/app/src/main/res/layout/activity_coordinator_layout.xml
@@ -25,4 +25,10 @@
         android:layout_height="wrap_content"
         android:text="@string/custom_rotate_behavior"/>
 
+    <Button
+        android:id="@+id/btnCollapsingToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/collapsing_toolbar"/>
+
 </LinearLayout>
