Added parallax effect

--- a/app/src/main/res/layout/activity_coordinator_layout.xml
+++ b/app/src/main/res/layout/activity_coordinator_layout.xml
@@ -31,4 +31,10 @@
         android:layout_height="wrap_content"
         android:text="@string/collapsing_toolbar"/>
 
+    <Button
+        android:id="@+id/btnParallax"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/parallax"/>
+
 </LinearLayout>
