--- a/app/src/main/res/layout/activity_parallax.xml
+++ b/app/src/main/res/layout/activity_parallax.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".coordinator.ScrollingActivity">
+    tools:context=".coordinator.ParallaxActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/ablParallax"
@@ -23,6 +23,16 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:toolbarId="@+id/toolbar">
 
+            <ImageView
+                android:id="@+id/expandedImage"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/cake"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.7"
+                tools:ignore="ContentDescription" />
+
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
@@ -33,7 +43,7 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_scrolling" />
+    <include layout="@layout/content_parallax" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
