--- a/app/src/main/res/layout/activity_constraint_layout.xml
+++ b/app/src/main/res/layout/activity_constraint_layout.xml
@@ -17,6 +17,12 @@
             android:layout_height="wrap_content"
             android:text="@string/swap_views"/>
 
+        <Button
+            android:id="@+id/btnSwapLayouts"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/swap_layouts"/>
+
     </LinearLayout>
 
 </ScrollView>
