--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,6 +68,12 @@
             android:layout_height="wrap_content"
             android:text="@string/constraint_layout"/>
 
+        <Button
+            android:id="@+id/btnInterpolators"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/interpolators"/>
+
     </LinearLayout>
 
 </ScrollView>
