--- a/app/src/main/res/layout/activity_interpolators.xml
+++ b/app/src/main/res/layout/activity_interpolators.xml
@@ -35,7 +35,8 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp" />
+                android:layout_marginRight="8dp"
+                android:progress="20" />
 
             <TextView
                 android:id="@+id/tvAccelerate"
@@ -55,7 +56,8 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp" />
+                android:layout_marginRight="8dp"
+                android:progress="20" />
 
             <TextView
                 android:id="@+id/tvDecelerate"
@@ -75,7 +77,8 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp" />
+                android:layout_marginRight="8dp"
+                android:progress="20" />
 
             <TextView
                 android:id="@+id/tvAccelerateDecelerate"
@@ -95,7 +98,8 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp" />
+                android:layout_marginRight="8dp"
+                android:progress="20" />
 
             <TextView
                 android:id="@+id/tvCycle"
@@ -115,7 +119,8 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp" />
+                android:layout_marginRight="8dp"
+                android:progress="20" />
 
             <TextView
                 android:id="@+id/tvAnticipate"
@@ -135,7 +140,8 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp" />
+                android:layout_marginRight="8dp"
+                android:progress="20" />
 
             <TextView
                 android:id="@+id/tvOvershoot"
@@ -155,7 +161,8 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp" />
+                android:layout_marginRight="8dp"
+                android:progress="20" />
 
             <TextView
                 android:id="@+id/tvAnticipateOvershoot"
@@ -175,7 +182,8 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp" />
+                android:layout_marginRight="8dp"
+                android:progress="20" />
 
             <TextView
                 android:id="@+id/tvBounce"
@@ -195,7 +203,8 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp" />
+                android:layout_marginRight="8dp"
+                android:progress="20" />
 
             <TextView
                 android:id="@+id/tvCustomSpring"
@@ -215,7 +224,8 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp" />
+                android:layout_marginRight="8dp"
+                android:progress="20" />
 
         </LinearLayout>
     </ScrollView>
