--- a/app/src/main/res/layout/activity_multi_fab_alt.xml
+++ b/app/src/main/res/layout/activity_multi_fab_alt.xml
@@ -18,6 +18,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:onClick="swapLayout"
+        android:rotation="45"
         app:backgroundTint="@color/colorPrimary"
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
