--- a/app/src/main/res/layout/activity_multi_fab.xml
+++ b/app/src/main/res/layout/activity_multi_fab.xml
@@ -13,14 +13,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         app:backgroundTint="@color/colorPrimary"
         app:fabSize="mini"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/fabMulti"
+        app:layout_constraintStart_toStartOf="@+id/fabMulti"
+        app:layout_constraintTop_toTopOf="@+id/fabMulti"
+        app:layout_constraintBottom_toBottomOf="@+id/fabMulti"
         app:srcCompat="@android:drawable/ic_input_add"/>
 
     <android.support.design.widget.FloatingActionButton
@@ -31,11 +29,12 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:visibility="gone"
         app:backgroundTint="@color/colorPrimary"
         app:fabSize="mini"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/fabMulti"
+        app:layout_constraintStart_toStartOf="@+id/fabMulti"
+        app:layout_constraintTop_toTopOf="@+id/fabMulti"
+        app:layout_constraintBottom_toBottomOf="@+id/fabMulti"
         app:srcCompat="@android:drawable/ic_input_add"/>
 
     <android.support.design.widget.FloatingActionButton
