Added custom views activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,12 @@
             android:layout_height="wrap_content"
             android:text="@string/interpolators"/>
 
+        <Button
+            android:id="@+id/btnCustomViews"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/custom_views"/>
+
     </LinearLayout>
 
 </ScrollView>
