Added activity for motion layout and increased target sdk version and migrated to android x

--- a/app/src/main/res/layout/activity_constraint_layout.xml
+++ b/app/src/main/res/layout/activity_constraint_layout.xml
@@ -29,6 +29,12 @@
             android:layout_height="wrap_content"
             android:text="@string/multi_fab"/>
 
+        <Button
+            android:id="@+id/btnMotionLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/motion_layout"/>
+
     </LinearLayout>
 
 </ScrollView>
