--- a/app/src/main/res/layout/activity_motion_layout.xml
+++ b/app/src/main/res/layout/activity_motion_layout.xml
@@ -4,8 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".coordinator.FabActivity"
-    tools:showIn="@layout/activity_fab">
+    tools:context=".constraint.MotionLayoutActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
