--- a/app/src/main/res/layout/activity_swap_view.xml
+++ b/app/src/main/res/layout/activity_swap_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/parentLayout"
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <android.support.constraint.Placeholder
+    <androidx.constraintlayout.widget.Placeholder
         android:id="@+id/placeholder"
         android:layout_width="48dp"
         android:layout_height="48dp"
@@ -83,4 +83,4 @@
         app:layout_constraintStart_toEndOf="@+id/imageView6"
         app:srcCompat="@android:drawable/star_big_on" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
