--- a/app/src/main/res/layout/activity_motion_layout.xml
+++ b/app/src/main/res/layout/activity_motion_layout.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".constraint.MotionLayoutActivity">
+    tools:context=".constraint.motion.MotionLayoutActivity">
 
-</androidx.constraintlayout.motion.widget.MotionLayout>
+    <Button
+        android:id="@+id/btnBasic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/basic"
+        />
+
+</LinearLayout>
