--- a/app/src/main/res/layout/activity_motion_layout.xml
+++ b/app/src/main/res/layout/activity_motion_layout.xml
@@ -5,13 +5,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".constraint.motion.MotionLayoutActivity">
+    tools:context=".constraint.motion.MotionLayoutActivity"
+    android:orientation="vertical"
+    >
 
     <Button
         android:id="@+id/btnBasic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/basic"
+        />
+
+    <Button
+        android:id="@+id/btnKeyFrameSet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/key_frame_set"
         />
 
 </LinearLayout>
