--- a/app/src/main/res/layout/activity_motion_layout.xml
+++ b/app/src/main/res/layout/activity_motion_layout.xml
@@ -17,6 +17,13 @@
         />
 
     <Button
+        android:id="@+id/btnBasic2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/basic_2"
+        />
+
+    <Button
         android:id="@+id/btnKeyFrameSet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
