Added viewpager motion layout example

--- a/app/src/main/res/layout/activity_motion_layout.xml
+++ b/app/src/main/res/layout/activity_motion_layout.xml
@@ -58,4 +58,10 @@
         android:text="@string/parallax"
         />
 
+    <Button
+        android:id="@+id/btnViewPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/view_pager"/>
+
 </LinearLayout>
