--- a/app/src/main/res/layout/activity_motion_layout.xml
+++ b/app/src/main/res/layout/activity_motion_layout.xml
@@ -64,4 +64,10 @@
         android:layout_height="wrap_content"
         android:text="@string/view_pager"/>
 
+    <Button
+        android:id="@+id/btnFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/fragment"/>
+
 </LinearLayout>
