--- a/app/src/main/res/xml/youtube_motion_scene.xml
+++ b/app/src/main/res/xml/youtube_motion_scene.xml
@@ -116,7 +116,10 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" >
+            <CustomAttribute app:attributeName="backgroundColor"
+                app:customColorValue="@android:color/white" />
+        </Constraint>
 
         <Constraint
             android:id="@id/topImage"
